--- a/app/views/questions/index.html.haml
+++ b/app/views/questions/index.html.haml
@@ -5,5 +5,5 @@
 - @questions.each do |question|
   %h3= link_to question.title, question
   %h5= question.body
-  - if question.user == current_user
+  - if user_signed_in? && current_user.author_of?(question)
     = link_to 'Delete', question_path(question), method: :delete
