--- a/app/views/questions/new.html.haml
+++ b/app/views/questions/new.html.haml
@@ -1,5 +1,11 @@
+- if @question.errors.any?
+  .alert.alert-danger
+    %h5= 'Ошибки:'
+    %ul
+      - @question.errors.full_messages.each do |message|
+        %li= message
+
 = form_for @question do |f|
-  = f.hidden_field :user_id, value: current_user.id
   = f.label :title
   = f.text_field :title
   = f.label :body
