--- a/app/views/questions/show.html.haml
+++ b/app/views/questions/show.html.haml
@@ -2,17 +2,22 @@
 %h5= @question.body
 %hr
 %h3= 'All answer:'
-- @answers.each do |answer|
+- @question.answers.each do |answer|
   = answer.body
-  - if answer.user == current_user
-    = link_to 'Delete', question_answer_path(@question, answer.id), method: :delete
+  - if user_signed_in? && current_user.author_of?(answer)
+    = link_to 'Delete', question_answer_path(@question, answer), method: :delete
   %br
 %hr
 %h3= 'Your answer to the question:'
-- if user_signed_in?
+-if user_signed_in?
+  - if @answer.errors.any?
+    .alert.alert-danger
+      %h5= 'Ошибки:'
+      %ul
+        - @answer.errors.full_messages.each do |message|
+          %li= message
+
   = form_for [@question, @answer] do |f|
-    = f.hidden_field :question_id, value: @question.id
-    = f.hidden_field :user_id, value: current_user.id
     = f.label :body
     = f.text_area :body
     = f.submit 'Add answer'
