--- a/app/views/questions/show.html.haml
+++ b/app/views/questions/show.html.haml
@@ -10,12 +10,7 @@
 %hr
 %h3= 'Your answer to the question:'
 -if user_signed_in?
-  - if @answer.errors.any?
-    .alert.alert-danger
-      %h5= 'Ошибки:'
-      %ul
-        - @answer.errors.full_messages.each do |message|
-          %li= message
+  = render 'shared/errors', object: @answer
 
   = form_for [@question, @answer] do |f|
     = f.label :body
