--- a/app/views/questions/show.html.haml
+++ b/app/views/questions/show.html.haml
@@ -3,8 +3,7 @@
 %hr
 %h3= 'All answer:'
 .answers
-  - @question.answers.each do |answer|
-    = render 'answers', answer: answer
+  = render @question.answers
 %hr
 %h3= 'Your answer to the question:'
 -if user_signed_in?
