Feature: edit answer and question, deleting answers, choose the best answer

--- a/app/views/answers/_answer.html.haml
+++ b/app/views/answers/_answer.html.haml
@@ -1,4 +1,16 @@
-= answer.body
-- if user_signed_in? && current_user.author_of?(answer)
-  = link_to 'Delete', question_answer_path(@question, answer), method: :delete
-%br
+%div{ class: answer.best.nil? ? "answer-#{answer.id}" : "answer-#{answer.id} best" }
+  = answer.body
+
+  - if user_signed_in? && current_user.author_of?(@question) && answer.best.nil?
+    = link_to 'Choose as the best', "/choose_the_best/#{answer.id}", method: :patch, remote: true, class: 'choose-answer-link', data: { answer_id: answer.id }
+
+  - if user_signed_in? && current_user.author_of?(answer)
+    = link_to 'Delete', question_answer_path(@question, answer), method: :delete, remote: true
+    = link_to 'Edit', '', remote: true, class: 'edit-answer-link', data: { answer_id: answer.id }
+
+    = form_for [@question, answer], remote: true, html: { id: "edit-answer-#{answer.id}" } do |f|
+      = f.label :body, "Answer"
+      = f.text_area :body
+      = f.submit 'Save'
+
+  %br
