--- a/app/views/answers/create.js.erb
+++ b/app/views/answers/create.js.erb
@@ -4,4 +4,10 @@
 
 $('.errors').html('<%= j render 'shared/errors', object: @answer %>')
 $('.flash').html('<%= j render 'shared/notice' %>')
-$('#answer_body').val('')
+$('#new_answer #answer_body').val('')
+
+$('.edit-answer-link').click(function(e){
+    $(this).hide();
+    answer_id = $(this).data('answerId');
+    $('form#edit-answer-' + answer_id).show();
+});
