--- a/app/views/questions/show.html.haml
+++ b/app/views/questions/show.html.haml
@@ -1,9 +1,10 @@
-%h1= @question.title
-%h5= @question.body
+.question
+  = render @question
+
 %hr
 %h3= 'All answer:'
 .answers
-  = render @question.answers
+  = render @question.answers.sorted
 %hr
 %h3= 'Your answer to the question:'
 -if user_signed_in?
