--- a/app/views/answers/_answer.html.haml
+++ b/app/views/answers/_answer.html.haml
@@ -1,8 +1,8 @@
-%div{ class: answer.best.nil? ? "answer-#{answer.id}" : "answer-#{answer.id} best" }
+%div{ class: !answer.best ? "answer-#{answer.id}" : "answer-#{answer.id} best" }
   = answer.body
 
-  - if user_signed_in? && current_user.author_of?(@question) && answer.best.nil?
-    = link_to 'Choose as the best', choose_the_best_question_answer_path(@question), method: :patch, remote: true, class: 'choose-answer-link'
+  - if user_signed_in? && current_user.author_of?(@question) && !answer.best
+    = link_to 'Choose as the best', choose_the_best_question_answer_path(@question, answer), method: :patch, remote: true, class: 'choose-answer-link'
 
   - if user_signed_in? && current_user.author_of?(answer)
     = link_to 'Delete', question_answer_path(@question, answer), method: :delete, remote: true
