--- a/app/views/questions/_form.html.haml
+++ b/app/views/questions/_form.html.haml
@@ -5,4 +5,10 @@
   = f.text_field :title
   = f.label :body
   = f.text_area :body
+  %p Attachments:
+  #attachments
+    = f.fields_for :attachments do |a|
+      = render 'attachment_fields', f: a
+    .links
+      = link_to_add_association "Add attachment", f, :attachments
   = f.submit 'Save'
