--- a/app/views/answers/_answer.html.haml
+++ b/app/views/answers/_answer.html.haml
@@ -12,6 +12,14 @@
   - if user_signed_in? && current_user.author_of?(@question) && !answer.best
     = link_to 'Choose as the best', choose_the_best_question_answer_path(@question, answer), method: :patch, remote: true, class: 'choose-answer-link'
 
+  - if user_signed_in? && !current_user.author_of?(answer)
+    - unless current_user.already_voted?(answer)
+      = link_to '+1', rating_up_question_answer_path(@question, answer), method: :patch
+      = link_to '-1', rating_down_question_answer_path(@question, answer), method: :patch
+    - else
+      = link_to 'Переголосовать', rating_reset_question_answer_path(@question, answer), method: :patch
+  = "(#{answer.diff_like})"
+
   - if user_signed_in? && current_user.author_of?(answer)
     = link_to 'Delete', question_answer_path(@question, answer), method: :delete, remote: true
     = link_to 'Edit', '', remote: true, class: 'edit-answer-link', data: { answer_id: answer.id }
