--- a/app/views/questions/index.html.haml
+++ b/app/views/questions/index.html.haml
@@ -7,3 +7,11 @@
   %h5= question.body
   - if user_signed_in? && current_user.author_of?(question)
     = link_to 'Delete', question_path(question), method: :delete
+  - if user_signed_in? && !current_user.author_of?(question)
+    - unless current_user.already_voted?(question)
+      = link_to '+1', rating_up_question_path(question), method: :patch
+      = link_to '-1', rating_down_question_path(question), method: :patch
+    - else
+      = link_to 'Переголосовать', rating_reset_question_path(question), method: :patch
+  = "(#{question.diff_like})"
+  %hr
