--- a/app/views/questions/index.html.haml
+++ b/app/views/questions/index.html.haml
@@ -3,15 +3,20 @@
 %h1= 'All Question'
 
 - @questions.each do |question|
-  %h3= link_to question.title, question
-  %h5= question.body
-  - if user_signed_in? && current_user.author_of?(question)
-    = link_to 'Delete', question_path(question), method: :delete
-  - if user_signed_in? && !current_user.author_of?(question)
-    - unless current_user.already_voted?(question)
-      = link_to '+1', rating_up_question_path(question), method: :patch
-      = link_to '-1', rating_down_question_path(question), method: :patch
-    - else
-      = link_to 'Переголосовать', rating_reset_question_path(question), method: :patch
-  = "(#{question.diff_like})"
-  %hr
+  %div{ class: "question-#{question.id}" }
+    %h3= link_to question.title, question
+    %h5= question.body
+    - if user_signed_in? && current_user.author_of?(question)
+      = link_to 'Delete', question_path(question), method: :delete
+    .rating
+      .rating_message
+      .rating_links
+        - if user_signed_in? && !current_user.author_of?(question)
+          - unless current_user.already_voted?(question)
+            = link_to '+1', rating_up_question_path(question), method: :patch, remote: true, class: 'rating-link'
+            = link_to '-1', rating_down_question_path(question), method: :patch, remote: true, class: 'rating-link'
+          - else
+            = link_to 'Переголосовать', rating_reset_question_path(question), method: :patch, remote: true, class: 'rating-link'
+      .diff_like
+        = "(#{question.diff_like})"
+    %hr
