--- a/app/views/questions/_form.html.haml
+++ b/app/views/questions/_form.html.haml
@@ -7,7 +7,7 @@
   = f.text_area :body
   %p Attachments:
   #attachments
-    = f.fields_for :attachments do |a|
+    = f.fields_for :attachments, @question.attachments.build do |a|
       = render 'attachment_fields', f: a
     .links
       = link_to_add_association "Add attachment", f, :attachments
