--- a/app/views/questions/_question.html.haml
+++ b/app/views/questions/_question.html.haml
@@ -1,21 +1,22 @@
 %div{ class: "question-#{question.id}" }
   %h3= link_to question.title, question
   %h5= question.body
-  - if user_signed_in? && current_user.author_of?(question)
+  - if can?(:destroy, Question) && current_user.author_of?(question)
     = link_to 'Delete', question_path(question), method: :delete
+  - if can?(:update, Question) && current_user.author_of?(question)
     = link_to 'Edit', edit_question_path(question), remote: true, class: 'edit-question-link'
   %p Attachments:
   %ul
     - question.attachments.each do |a|
       %li
         = link_to a.file.identifier, a.file.url
-        - if user_signed_in? && current_user.author_of?(question)
+        - if can?(:destroy, Question) && current_user.author_of?(question)
           = link_to 'delete attachment', attachment_path(a), method: :delete
 
   .rating
     .rating_message
     .rating_links
-      - if user_signed_in? && !current_user.author_of?(question)
+      - if can?(:rating_up, Answer) && can?(:rating_down, Answer) && !current_user.author_of?(question)
         - unless current_user.already_voted?(question)
           = link_to '+1', rating_up_question_path(question), method: :patch, remote: true, class: 'rating-link'
           = link_to '-1', rating_down_question_path(question), method: :patch, remote: true, class: 'rating-link'
@@ -26,7 +27,7 @@
 
   .question-comments
     = render question.comments
-  - if user_signed_in?
+  - if can?(:create, Comment)
     .question-comments-form
       %p Создать комментарий к вопросу:
       = form_for [question, question.comments.new], remote: true do |f|
