--- a/app/views/questions/show.html.haml
+++ b/app/views/questions/show.html.haml
@@ -7,7 +7,7 @@
   = render @question.answers.sorted
 %hr
 %h3= 'Your answer to the question:'
--if user_signed_in?
+-if can?(:create, Answer)
   .errors
 
   = form_for [@question, @answer], remote: true do |f|
