--- a/app/views/answers/_answer.html.haml
+++ b/app/views/answers/_answer.html.haml
@@ -5,7 +5,7 @@
     - answer.attachments.each do |attach|
       %li
         = link_to attach.file.identifier, attach.file.url
-        - if can?(:destroy, Answer) && current_user.author_of?(answer)
+        - if can?(:destroy, attach)
           = link_to 'delete attachment', attachment_path(attach), method: :delete
 
 
@@ -15,7 +15,7 @@
   .rating
     .rating_message
     .rating_links
-      - if can?(:rating_up, Answer) && can?(:rating_down, Answer) && !current_user.author_of?(answer)
+      - if can?(:rating_up, answer) && can?(:rating_down, answer)
         - unless current_user.already_voted?(answer)
           = link_to '+1', rating_up_answer_path(answer), remote: true,  method: :patch, class: 'rating-link'
           = link_to '-1', rating_down_answer_path(answer), remote: true, method: :patch, class: 'rating-link'
@@ -24,9 +24,9 @@
     .diff_like
       = "(#{answer.diff_like})"
 
-  - if can?(:destroy, Answer) && current_user.author_of?(answer)
+  - if can?(:destroy, answer)
     = link_to 'Delete', answer_path(answer), method: :delete, remote: true
-  - if can?(:update, Answer) && current_user.author_of?(answer)
+  - if can?(:update, answer)
     = link_to 'Edit', '', remote: true, class: 'edit-answer-link', data: { answer_id: answer.id }
 
     = form_for answer, remote: true, html: { id: "edit-answer-#{answer.id}" } do |f|
