--- a/app/views/answers/_answer.html.haml
+++ b/app/views/answers/_answer.html.haml
@@ -1,47 +1,48 @@
-%div{ class: !answer.best ? "answer-#{answer.id}" : "answer-#{answer.id} best" }
-  = answer.body
-  %p Attachments:
-  %ul
-    - answer.attachments.each do |attach|
-      %li
-        = link_to attach.file.identifier, attach.file.url
-        - if can?(:destroy, attach)
-          = link_to 'delete attachment', attachment_path(attach), method: :delete
+- cache answer do
+  %div{ class: !answer.best ? "answer-#{answer.id}" : "answer-#{answer.id} best" }
+    = answer.body
+    %p Attachments:
+    %ul
+      - answer.attachments.each do |attach|
+        %li
+          = link_to attach.file.identifier, attach.file.url
+          - if can?(:destroy, attach)
+            = link_to 'delete attachment', attachment_path(attach), method: :delete
 
 
-  - if user_signed_in? && current_user.author_of?(answer.question) && !answer.best
-    = link_to 'Choose as the best', choose_the_best_answer_path(answer), method: :patch, remote: true, class: 'choose-answer-link'
+    - if user_signed_in? && current_user.author_of?(answer.question) && !answer.best
+      = link_to 'Choose as the best', choose_the_best_answer_path(answer), method: :patch, remote: true, class: 'choose-answer-link'
 
-  .rating
-    .rating_message
-    .rating_links
-      - if can?(:rating_up, answer) && can?(:rating_down, answer)
-        - unless current_user.already_voted?(answer)
-          = link_to '+1', rating_up_answer_path(answer), remote: true,  method: :patch, class: 'rating-link'
-          = link_to '-1', rating_down_answer_path(answer), remote: true, method: :patch, class: 'rating-link'
-        - else
-          = link_to 'Переголосовать', rating_reset_answer_path(answer), remote: true, method: :patch, class: 'rating-link'
-    .diff_like
-      = "(#{answer.diff_like})"
+    .rating
+      .rating_message
+      .rating_links
+        - if can?(:rating_up, answer) && can?(:rating_down, answer)
+          - unless current_user.already_voted?(answer)
+            = link_to '+1', rating_up_answer_path(answer), remote: true,  method: :patch, class: 'rating-link'
+            = link_to '-1', rating_down_answer_path(answer), remote: true, method: :patch, class: 'rating-link'
+          - else
+            = link_to 'Переголосовать', rating_reset_answer_path(answer), remote: true, method: :patch, class: 'rating-link'
+      .diff_like
+        = "(#{answer.diff_like})"
 
-  - if can?(:destroy, answer)
-    = link_to 'Delete', answer_path(answer), method: :delete, remote: true
-  - if can?(:update, answer)
-    = link_to 'Edit', '', remote: true, class: 'edit-answer-link', data: { answer_id: answer.id }
+    - if can?(:destroy, answer)
+      = link_to 'Delete', answer_path(answer), method: :delete, remote: true
+    - if can?(:update, answer)
+      = link_to 'Edit', '', remote: true, class: 'edit-answer-link', data: { answer_id: answer.id }
 
-    = form_for answer, remote: true, html: { id: "edit-answer-#{answer.id}" } do |f|
-      = f.label :body, "Answer"
-      = f.text_area :body
-      = f.submit 'Save'
-  %br
-
-  .answer-comments
-    = render answer.comments
-  - if  can?(:create, Comment)
-    .answer-comments-form
-      %p Создать комментарий к ответу:
-      = form_for [ answer, answer.comments.new ], remote: true do |f|
-        = f.label :body
+      = form_for answer, remote: true, html: { id: "edit-answer-#{answer.id}" } do |f|
+        = f.label :body, "Answer"
         = f.text_area :body
-        = f.submit 'Add comment'
-  %hr
+        = f.submit 'Save'
+    %br
+
+    .answer-comments
+      = render answer.comments
+    - if  can?(:create, Comment)
+      .answer-comments-form
+        %p Создать комментарий к ответу:
+        = form_for [ answer, answer.comments.new ], remote: true do |f|
+          = f.label :body
+          = f.text_area :body
+          = f.submit 'Add comment'
+    %hr
