--- a/app/views/comments/_comment.html.haml
+++ b/app/views/comments/_comment.html.haml
@@ -1,3 +1,4 @@
-%div{ class: "comment-#{comment.id}" }
-  %p= comment.body
-  %p= comment.user.email
+- cache comment do
+  %div{ class: "comment-#{comment.id}" }
+    %p= comment.body
+    %p= comment.user.email
