--- a/app/views/questions/show.html.haml
+++ b/app/views/questions/show.html.haml
@@ -1,21 +1,22 @@
-.question
-  = render @question
+- cache @question do
+  .question
+    = render @question
 
-%hr
-%h3= 'All answer:'
-.answers
-  = render @question.answers.sorted
-%hr
-%h3= 'Your answer to the question:'
--if can?(:create, Answer)
-  .errors
+  %hr
+  %h3= 'All answer:'
+  .answers
+    = render @question.answers.sorted
+  %hr
+  %h3= 'Your answer to the question:'
+  -if can?(:create, Answer)
+    .errors
 
-  = form_for [@question, @answer], remote: true do |f|
-    = f.label :body
-    = f.text_area :body
-    #attachments
-    = f.fields_for :attachments, @answer.attachments.build do |a|
-      = render 'attachment_fields', f: a
-    .links
-      = link_to_add_association "Add attachment", f, :attachments
-    = f.submit 'Add answer'
+    = form_for [@question, @answer], remote: true do |f|
+      = f.label :body
+      = f.text_area :body
+      #attachments
+      = f.fields_for :attachments, @answer.attachments.build do |a|
+        = render 'attachment_fields', f: a
+      .links
+        = link_to_add_association "Add attachment", f, :attachments
+      = f.submit 'Add answer'
